ajout des photos et paragraphes royaume-uni et japon

--- a/index.html
+++ b/index.html
@@ -14,7 +14,28 @@
 <body>
     <header></header>
     
-    <main></main>
+    <main>
+
+        <section class="resume-pays">
+
+            <div class="royaume-uni">
+
+                <img src="images-resume/royaume-uni3.jpg" alt="une vue plongeante sur Londres">
+                <p>Le Royaume Uni regroupe quatre pays et autant de voyages différents à prévoir. Non, cet état ne se définit pas seulement à l’Angleterre comme on peut souvent en faire l’amalgame mais bien à une multitude de paysages et de cultures à part. Outre-Manche, vous apprécierez l’osmose que l’on retrouve entre les villes britanniques, le climat doux bien que peu ensoleillé, et les plaines verdoyantes des contrées. C’est l’occasion d’aller voir plus loin que la Big Ben de Londres, et enfin visiter l’Écosse, le Pays de Galles, l’Irlande du Nord, et les terres et les autres villes de l’Angleterre. Bien que la capitale soit un bonheur pour chaque voyageur, vous lirez ci-dessous que chacun des pays mérite qu’on s’y attarde bien plus qu’un simple weekend.</p>
+            </div>
+
+            <div class="japon">
+
+                <img src="images-resume/japon1.webp" alt="un temple japonais">
+                <p>Terre de tous les contrastes, le Japon offre un éclectisme à nul autre pareil. Des mégalopoles électriques et high-tech à la quiétude sereine des lieux bouddhistes en passant par une gastronomie des plus inventives : il existe de multiples raisons de vous vous décider à préparer un voyage au Japon.</p>
+            </div>
+
+            <div class="australie">
+
+                <img src="" alt="">
+            </div>
+        </section>
+    </main>
 
     <footer></footer>
 </body>
