ajout de australie et canada

--- a/index.html
+++ b/index.html
@@ -32,8 +32,17 @@
 
             <div class="australie">
 
-                <img src="" alt="">
+                <img src="images-resume/australie4.jpeg" alt="vue d'ensemble de Sydney">
+                <p>Doté d’une impressionnante collection de merveilles naturelles, d’une faune abondante, de plages éblouissantes, de villes cosmopolites et des vastes étendues de l’Outback et d’une histoire singulière. Il est facile de comprendre pourquoi ce pays captive tant. Non seulement il offre des activités pour tous les goûts, budgets, et intérêts. Mais il offre également des expériences uniques presque introuvables ailleurs. Il n’y a absolument rien que vous ne puissiez faire si vous décidez de partir en Australie.</p>
             </div>
+
+            <div class="canada">
+
+                <img src="images-resume/canada1.jpg" alt="une forêt paiside au Canada">
+                <p>Culture, gastronomie, expériences : le Canada possède sans conteste une offre diversifiée pour satisfaire tous les goûts. Quelle que soit votre passion, nous avons quelque chose pour vous. Tout ce que vous avez à faire, c’est de choisir un endroit à visiter et de commencer votre exploration.</p>
+            </div>
+
+            
         </section>
     </main>
 
