--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
 <body>
     <header></header>
     
-    <main></main>
+    <main>
+        
+    </main>
 
     <footer>
         <footer class="footer">
