--- a/index.html
+++ b/index.html
@@ -38,11 +38,15 @@
 
             <div class="canada">
 
-                <img src="images-resume/canada1.jpg" alt="une forêt paiside au Canada">
+                <img src="images-resume/canada1.png" alt="une forêt paiside au Canada">
                 <p>Culture, gastronomie, expériences : le Canada possède sans conteste une offre diversifiée pour satisfaire tous les goûts. Quelle que soit votre passion, nous avons quelque chose pour vous. Tout ce que vous avez à faire, c’est de choisir un endroit à visiter et de commencer votre exploration.</p>
             </div>
 
-            
+            <div class="corse">
+
+                <img src="images-resume/corse1.png" alt="la Corse au crépuscule">
+                <p>La Corse est un magnifique mélange de baies de sable blanc et de criques de galets, considérées parmi les plus propres et les plus belles de France. Toutes offrent une excellente baignade et, pour les plus aventureux, de nombreuses possibilités de sports nautiques comme la voile, la planche à voile et le kayak de mer.</p>
+            </div>
         </section>
     </main>
 
