ajout de la photo header et mise en place du titre

--- a/contact.html
+++ b/contact.html
@@ -11,8 +11,8 @@
     <title>Document</title>
 </head>
 
-<body>
-    <header></header>
+<body id="contact-body">
+    <header><a href="index.html">index</a></header>
     
     <main>
         <article id="container">
@@ -30,13 +30,13 @@
                 <select class="form-separate" name="pays" id="pays" required>
                     <option value="canada">Canada</option>
                     <option value="japon">Japon</option>
-                    <option value="ecosse">Ecosse</option>
-                    <option value=""></option>
-                    <option value=""></option>
+                    <option value="royaume-uni">Royaume-uni</option>
+                    <option value="australie">Australie</option>
+                    <option value="corse"></option>
                 </select>
 
                 <label for="commentaires">Commentaires</label>
-                <textarea name="commentaires" id="commentaires" cols="50" rows="10"></textarea>
+                <textarea class="form-separate" name="commentaires" id="commentaires" cols="50" rows="10"></textarea>
 
                 <input class="form-separate" type="submit" value="Envoyer">
             </form>
