--- a/index.html
+++ b/index.html
@@ -12,7 +12,16 @@
 </head>
 
 <body>
-    <header><a href="contact.html">contact</a></header>
+    <header>
+        <article>
+            <section class="flex-header">
+                <img class="bg-img" src="/image/header-pic.jpg" alt="">
+                <div class="title-header">
+                    <h1>A vol d'oiseaux</h1>
+                </div>
+            </section>
+        </article>
+    </header>
     
     <main></main>
 
