ajout page contact + background-img header et titre h1

--- a/index.html
+++ b/index.html
@@ -12,10 +12,9 @@
 </head>
 
 <body>
-    <header>
+    <header class="">
         <article>
             <section class="flex-header">
-                <img class="bg-img" src="/image/header-pic.jpg" alt="">
                 <div class="title-header">
                     <h1>A vol d'oiseaux</h1>
                 </div>
