Menu déroulant terminé

--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
                 <li><a href="">Continents</a>
                     <ul class="sous-menu">
                         <li><a href="">Amérique du Nord</a></li>
-                            
+                        <li><a href="">Afrique </a></li>
                         <li><a href="">Europe</a></li>
-                            
                         <li><a href="">Asie</a></li>
+                        <li><a href="">Océanie</a></li>
                     </ul>
                 </li>
 
