début page australie + css slide

--- a/index.html
+++ b/index.html
@@ -12,12 +12,13 @@
 </head>
 
 <body>
-    <header class="">
+    <header>
         <article>
             <section class="flex-header">
                 <div class="title-header">
                     <h1>A vol d'oiseaux</h1>
                 </div>
+                <a href="australie.html">Australie</a>
             </section>
         </article>
     </header>
