--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                     </ul>
                 </li>
 
-                <li><a href="">Contact</a></li>
+                <li><a href="contact.html">Contact</a></li>
             </ul>
         </nav>
     </header>
