--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
             <div class="container bottom_border">
                 <div class="row">
                     <div class="column" id="logo">
-                        <img src="logo_voyage.png">
+                        <img src="images/logo_voyage.png">
                     </div>
                     <div class=" column">
                         <h5 class="contact2">Contactez Nous</h5>
