--- a/australie.html
+++ b/australie.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@1,300&family=Lora:ital,wght@1,600&family=Martel&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/australie.css" type="text/css">
     <title>Australie</title>
 </head>
@@ -22,11 +25,29 @@
                         <section class="title-australie">
                             <h2>Melbourne</h2>
                         </section>
-                        <section class="part1">
-                            <img class="img-melbourne" src="images/botanic-garden.jpeg" alt="">
+                        <section class="melbourne1">
+                            <img class="img-melbourne1" src="images/botanic-garden.jpg" alt="jardin botanqique royal de melbourne">
                             <div>
+                                <b><h3>Jardins Botaniques Royaux de Melbourne</h3></b>
                                 <p>Des roses, des palmiers, des cactus et 14 autres « collections » végétales vous attendent dans les jardins botaniques. En tout, on y trouve plus de 50 000 plantes et 12 000 espèces, ainsi qu’un véritable coin de forêt tropicale.</p>
                                 <p>Le jardin botanique est l’une des principales attractions touristiques de Melbourne et accueille chaque année 1,6 million de visiteurs. Il abrite d’innombrables oiseaux, séduits par la diversité de sa vie végétale, et notamment des cygnes noirs, des cacatoès et des martins-chasseurs.</p>
+                            </div>
+                        </section>
+                        <section class="melbourne2">
+                            <div>
+                                <b><h3> Quartier Fitzroy</h3></b>
+                                <p>Situé juste au nord du centre-ville, le quartier de Fitzroy constitue pour toute la scène alternative de Melbourne un véritable point de ralliement. Dans les boutiques des créateurs de mode locaux, les galeries d’art et les ateliers, la création artistique est ici omniprésente et s’affiche jusque sur les façades d’immeubles.</p>
+                                <p>Fitzroy est aussi un paradis pour les amateurs de vintage, qui trouveront forcément le vêtement délicieusement rétro ou le classique indémodable dont ils rêvent dans les friperies du quartier. </p>
+                            </div>
+                            <img class="img-melbourne2" src="images/fitzroy.jpg" alt="quartier fitzroy">
+                        </section>
+                        <section class="melbourne1">
+                            <img class="img-melbourne1" src="images/coda.jpg" alt="restaurant coda">
+                            <div>
+                                <b><h3>Coda</h3></b>
+                                <p>D'origine italo-indienne, le propriétaire et chef cuisinier du Coda, Adam D'Sylva, s'inspire tout naturellement des deux traditions culinaires avec lesquelles il a grandi pour concocter des plats inédits, à l'image de son crabe au poivre noir frit au wok, de ses crevettes caramélisées au piment ou encore de sa salade de caille.</p>
+                                <p>Lauréat du titre de « meilleur jeune chef de l'année », D'Sylva a notamment travaillé en Italie, à Hong Kong et à New York, enrichissant au fil des expériences sa cuisine et ses influences.</p>
+                                <p>Le nom de son restaurant, « Coda », est celui d'un album de Led Zeppelin sorti en 1982. La décoration intérieure des lieux, sobre et dépouillée, met en valeur les grands abat-jours qui habillent l'espace de leur lumière chaleureuse, et les fenêtres à croisillons depuis lesquelles on observe le tumulte de Flinders Lane.</p>
                             </div>
                         </section>
                     </article>
@@ -41,11 +62,33 @@
                     tabindex="0"
                     class="carousel__slide">
                     <article>
-                        <section class="title-australie">
-                            <h2>Sydney</h2>
+                        <section class="title-australie title-green">
+                            <h2>Gold Coast</h2>
                         </section>
-                        <section>
-
+                        <section class="goldcoast1">
+                            <img class="img-goldcoast1" src="images/surfers-paradise.jpg" alt="gold coast plage et building">
+                            <div>
+                                <b><h3>Surfer's Paradise</h3></b>
+                                <p>Vous avez emporté votre maillot de bain ? S'étendant sur 57 kilomètres, le littoral de la Gold Coast offre certaines des meilleures vagues d'Australie pour le surf, ainsi que des criques calmes idéales pour la baignade et le paddle, le tout bordé de commerces et de restaurants animés. Cette ville du sud-est du Queensland compte également plus de 860 kilomètres de canaux et de rivières navigables. Certains regorgent de plages et d'autres sont idéaux pour une croisière d'exploration en bateau.</p>
+                                <p>Si vous vous enfoncez pendant 30 minutes à l'intérieur des terres, vous atterrirez dans une ancienne forêt tropicale de l'arrière-pays, où se côtoient centres de bien-être et domaines viticoles. Voici les incontournables à explorer pendant votre séjour.</p>
+                            </div>
+                        </section>
+                        <section class="goldcoast2">
+                            <div>
+                                <b><h3>Rick Shores</h3></b>
+                                <p>Avec ses grandes baies vitrées donnant directement sur Burleigh Beach, Rick Shores profite pleinement de sa proximité avec l'océan. Ici, les poissons et fruits de mer sont à l'honneur avec une influence panasiatique colorée.</p>
+                                <p>Le sandwich Moreton Bay bug (une espèce de homard) au sriracha avec mayonnaise et salade est sans doute le plat le plus célèbre du restaurant, de quoi vous mettre l'eau à la bouche.</p>
+                                <p>Le menu change régulièrement (y compris la carte des boissons largement renommées), ce qui vous donne encore une excellente raison de redécouvrir encore et encore ce petit coin de paradis.</p>
+                            </div>
+                            <img class="img-goldcoast2" src="images/rick-shores.jpg" alt="restaurant bord de mer">
+                        </section>
+                        <section class="goldcoast1">
+                            <img class="img-goldcoast1" src="images/skypoint.jpg" alt="tour skypoint">
+                            <div>
+                                <b><h3>Skypoint</h3></b>
+                                <p>Vous avez toujours voulu visiter le sommet du plus haut bâtiment d'Australie ? La plate-forme d'observation SkyPoint offre une vue panoramique sur la Gold Coast, à 230 m au-dessus du niveau de la mer, située au sommet de l'emblématique bâtiment Q1 à Surfers Paradise. Le point de vue unique de SkyPoint vous permet d'admirer l'ensemble des toits de la ville à partir d'un seul endroit afin que vous puissiez savourer un délicieux repas ou un cocktail signature au plus haut Bistro+Bar de Gold Coast, situé au 77ème étage !  </p>
+                                <p>Si vous vous sentez un peu plus aventureux, partez à la conquête du SkyPoint Climb ! Il s'agit de la plus haute ascension externe d'Australie, commençant au niveau 77 à SkyPoint Observation Deck. En suivant un guide d'ascension, les participants remonteront ensuite vers le nid d'aigles situé au point culminant de l'ascension à environ 270 mètres au-dessus du sol. Des arrêts réguliers seront effectués pour admirer les superbes vues à 360 degrés de la région de la Gold Coast, y compris les plages dorées, les toits de la ville et l'arrière-pays verdoyant.</p>
+                            </div>
                         </section>
                     </article>
                 <div class="carousel__snapper"></div>
@@ -59,7 +102,31 @@
                     class="carousel__slide">
                     <article>
                         <section class="title-australie">
-                            <h2>Gold Coast</h2>
+                            <h2>Sydney</h2>
+                        </section>
+                        <section class="sydney1">
+                            <img class="img-sydney1" src="images/sydney-opera.webp" alt="sydney opera">
+                            <div>
+                                <b><h3>Opéra de Sydney</h3></b>
+                                <p>L’emblématique opéra de Sydney, avec ses voiles rugissantes, ses lignes épurées, ses courbes gracieuses et ses élégantes installations, est l’un des bâtiments les plus reconnaissables au monde. C’est un chef-d’œuvre architectural.</p>
+                                <p>Situé à Bennelong Point, une petite péninsule du port de Sydney, la ligne de son toit est censée symboliser les « voiles » des navires d’une époque révolue et les spinnakers des yachts de course qui naviguent dans le port aujourd’hui. Il s’agit d’un centre d’arts du spectacle polyvalent. Il comprend des salles de concert, des théâtres, de plus petits studios et de salles à usage spécial.</p>
+                            </div>
+                        </section>
+                        <section class="sydney2">
+                            <div>
+                                <b><h3></h3></b>
+                                <p>Henry Deane, le joyau de la couronne de l'hôtel Palisade, révèle le charme moderne et sophistiqué du bâtiment. Réparti sur deux étages, le bar-salon contemporain offre une vue imprenable sur Sydney, quelle que soit la direction dans laquelle vous regardez.</p>
+                                <p>Le bar à cocktails s'étend sur les niveaux 4 et 5 de l'hôtel Palisade, et sert à la fois le déjeuner et le dîner, le menu créé et dirigé par le chef Cian Mulholland est conçu pour être partagé et complimente le port environnant. Venez pour la nourriture et les boissons, restez pour la vue imprenable sur le port.</p>
+                            </div>
+                            <img class="img-sydney2" src="images/henry-deane.jpg" alt="intérieur bar harry deane">
+                        </section>
+                        <section class="sydney1">
+                            <img class="img-sydney1" src="images/the-rocks.jpg" alt="quartier the rocks">
+                            <div>
+                                <b><h3>The Rocks</h3></b>
+                                <p>Les premiers habitants du quartier The Rocks étaient des bagnards et des marins venus de la vieille Angleterre. Il s'agit du quartier le plus ancien de la ville. Ses rues pavées abritent plus de 100 sites et bâtiments patrimoniaux, notamment la plus vieille maison de Sydney, Camden Cottage, construite en 1816.</p>
+                                <p> Dégustez un « middy » (285 ml) ou un « schooner » (425 ml) de bière et dînez « al fresco » sur le front de mer dans l'un des plus vieux pubs de Sydney. Les marchés du week-end sont l'endroit idéal pour trouver des souvenirs faits main par des artistes locaux, des aliments bio et des bijoux de créateurs dans une ambiance décontractée et conviviale.</p>
+                            </div>
                         </section>
                     </article>
                 <div class="carousel__snapper"></div>
