ajout page slide australie plus css du slide

--- a/australie.html
+++ b/australie.html
@@ -23,6 +23,45 @@
                     class="carousel__slide">
                     <article>
                         <section class="title-australie">
+                            <h2>Australie</h2>
+                        </section>
+                        <section class="australie1">
+                            <img class="img-australie1" src="images/drapeau.jpg" alt="drapeau australien">
+                            <div>
+                                <b><h3>Australie</h3></b>
+                                <p>L'Australie, est un pays d'Océanie, situé entre les océans Pacifique et Indien. Elle comprend l'île principale du continent australien, l'île de Tasmanie ainsi que de nombreuses petites îles. Avec une superficie de 7 741 200 km2, l'Australie est le plus grand pays d'Océanie et le sixième plus grand pays du monde.</p>
+                                <p>Son île principale est le centre du continent habité le plus ancien, le plus plat et le plus sec, avec les sols les moins fertiles. L'Australie est un pays mégadivers et sa taille lui confère une grande variété de paysages et de climats, avec des déserts au centre, des forêts tropicales humides au nord-est et des chaînes de montagnes au sud-est.</p>
+                            </div>
+                        </section>
+                        <section class="australie2">
+                            <div>
+                                <b><h3>Faune et Flore</h3></b>
+                                <p>Bien que la majeure partie du pays soit désertique ou semi-aride, l’Australie (Tasmanie comprise) ne manque pas d’habitats naturels diversifiés pour accueillir différentes espèces animales et végétales. Pour une partie des animaux de ce continent, les scientifiques parlent de mégafaune australienne.</p>
+                                <p>Du fait du grand âge de ce territoire, de son climat très variable dans le temps et son isolation géographique très longue, une faune et une flore particulières ont pu se développer, en général d'origine très ancienne, tels que les oiseaux aptères (émeu), ou bien les mammifères monotrèmes (ovipares) et marsupiaux (à poche marsupiale ou marsupium), ayant précédé dans l'évolution les mammifères placentaires. </p>
+                            </div>
+                            <img class="img-melbourne2" src="images/koala.webp" alt="quatre koala">
+                        </section>
+                        <section class="australie1">
+                            <img class="img-melbourne1" src="images/climats.webp" alt="restaurant coda">
+                            <div>
+                                <b><h3>Climats</h3></b>
+                                <p>Les côtes du nord et du nord-est ont un climat tropical. De décembre à avril, il fait très chaud (29 °C à Darwin, 26 °C à Cairns) et très humide avec des pluies tropicales d'été. Il pleut de 15 à 20 jours par mois. Ainsi, en décembre, il tombe 225 mm d'eau à Cairns et Darwin, en janvier et février de 300 à 400 mm, en mars 300 mm à Cairns et 450 mm à Darwin. À partir de mi-avril, les pluies deviennent plus rares et les températures descendent un peu, tout en restant élevées (26 °C de mai à septembre à Darwin, 22 °C à Cairns).</p>
+                                <p>De mai à septembre, ce qui correspond à l'hiver, s'égrènent donc les mois les plus agréables avec un temps sec et des températures clémentes. À partir d'octobre, il recommence à pleuvoir et les températures remontent sensiblement.</p>
+                            </div>
+                        </section>
+                    </article>
+                <div class="carousel__snapper">
+                    <a href="#carousel__slide4"
+                    class="carousel__prev">Go to last slide</a>
+                    <a href="#carousel__slide2"
+                    class="carousel__next">Go to next slide</a>
+                </div>
+                </li>
+                <li id="carousel__slide2"
+                    tabindex="0"
+                    class="carousel__slide">
+                    <article>
+                        <section class="title-australie">
                             <h2>Melbourne</h2>
                         </section>
                         <section class="melbourne1">
@@ -52,13 +91,13 @@
                         </section>
                     </article>
                 <div class="carousel__snapper">
-                    <a href="#carousel__slide4"
+                    <a href="#carousel__slide1"
                     class="carousel__prev">Go to last slide</a>
-                    <a href="#carousel__slide2"
+                    <a href="#carousel__slide3"
                     class="carousel__next">Go to next slide</a>
                 </div>
                 </li>
-                <li id="carousel__slide2"
+                <li id="carousel__slide3"
                     tabindex="0"
                     class="carousel__slide">
                     <article>
@@ -92,12 +131,12 @@
                         </section>
                     </article>
                 <div class="carousel__snapper"></div>
-                <a href="#carousel__slide1"
+                <a href="#carousel__slide2"
                     class="carousel__prev">Go to previous slide</a>
-                <a href="#carousel__slide3"
+                <a href="#carousel__slide4"
                     class="carousel__next">Go to next slide</a>
                 </li>
-                <li id="carousel__slide3"
+                <li id="carousel__slide4"
                     tabindex="0"
                     class="carousel__slide">
                     <article>
@@ -114,7 +153,7 @@
                         </section>
                         <section class="sydney2">
                             <div>
-                                <b><h3></h3></b>
+                                <b><h3>Henry Deane</h3></b>
                                 <p>Henry Deane, le joyau de la couronne de l'hôtel Palisade, révèle le charme moderne et sophistiqué du bâtiment. Réparti sur deux étages, le bar-salon contemporain offre une vue imprenable sur Sydney, quelle que soit la direction dans laquelle vous regardez.</p>
                                 <p>Le bar à cocktails s'étend sur les niveaux 4 et 5 de l'hôtel Palisade, et sert à la fois le déjeuner et le dîner, le menu créé et dirigé par le chef Cian Mulholland est conçu pour être partagé et complimente le port environnant. Venez pour la nourriture et les boissons, restez pour la vue imprenable sur le port.</p>
                             </div>
@@ -130,9 +169,9 @@
                         </section>
                     </article>
                 <div class="carousel__snapper"></div>
-                <a href="#carousel__slide2"
+                <a href="#carousel__slide3"
                     class="carousel__prev">Go to previous slide</a>
-                <a href="#carousel__slide4"
+                <a href="#carousel__slide1"
                     class="carousel__next">Go to next slide</a>
                 </li>
             </ol>
@@ -149,6 +188,10 @@
                 <li class="carousel__navigation-item">
                     <a href="#carousel__slide3"
                     class="carousel__navigation-button">Go to slide 3</a>
+                </li>
+                <li class="carousel__navigation-item">
+                    <a href="#carousel__slide4"
+                    class="carousel__navigation-button">Go to slide 4</a>
                 </li>
                 </ol>
             </aside>
