essaie d'ajout de slide photos

--- a/australie.html
+++ b/australie.html
@@ -22,8 +22,10 @@
                     tabindex="0"
                     class="carousel__slide">
                     <article>
-                        <section class="title-australie">
-                            <h2>Australie</h2>
+                        <section class="title-australie title-green">
+                            <div class="content">
+                                <h2>Australie</h2>
+                            </div>
                         </section>
                         <section class="australie1">
                             <img class="img-australie1" src="images/drapeau.jpg" alt="drapeau australien">
@@ -195,6 +197,16 @@
                 </li>
                 </ol>
             </aside>
+            </section>
+        </article>
+        <article>
+            <section class="container">
+                <div class="wrapper">
+                    <img src="images/rue.jpg" alt="">
+                    <img src="images/plage.jpg" alt="">
+                    <img src="images/jardin.jpg" alt="">
+                    <img src="images/bibiothéques.jpg" alt="">
+                </div>
             </section>
         </article>
     </main>
